[tool.poetry]
name = "pyfuel"
version = "0.1.0"
description = "SMCをSOAPでいじってみたい"
authors = ["syoki.matsuno <syoki.matsuno@up.uhuru.jp>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Salesforce-FuelSDK = "^1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
